# ChatBotInterface

./: README.md
eduAgent/: .env  .env.example  .gitignore  README.md  config.py  docker-compose.yml  history.json  image_agent.py  main.py  mongo.py  package-lock.json  pyproject.toml  qdrant_utils.py  requirements.txt  run_image_search.py  search.py  server.py  test.html  test.py  test_mongo.py
eduAgent/chat/: mongo.py
eduAgent/models/: user_model.py
eduAgent/routes/: auth.py  blog.py
eduAgent/utils/: security.py
frontChat/: .env  index.html  tailwind.config.js  vite.config.js
frontChat/public/neural-network/: index.html  taki.code-workspace
frontChat/public/neural-network/assets/: main.js
frontChat/src/: App.jsx
frontChat/src/components/algorithms/: Decisiontreevisualizer.jsx  KMeansVisualizer.jsx  LinearRegressionVisualizer.jsx  NeuralNetworkVisualizer.jsx  NeuralNetworkViz.jsx
frontChat/src/components/auth/: LoginPage.jsx  ProtectedRoute.jsx  RegisterPage.jsx
frontChat/src/constants/: config.js  routes.js
frontChat/src/context/: AuthContext.jsx  UserProgressContext.jsx
frontChat/src/hooks/: useChat.js
frontChat/src/pages/: AlgorithmsPage.jsx  BlogArticlePage.jsx  BlogCreatePage.jsx  BlogPage.jsx  ChatbotPage.jsx  Decisiontreepage.jsx  DocumentationPage.jsx  ExperimentationPage.jsx  HomePage.jsx  ImageRecognitionPage.jsx  KMeansPage.jsx  LinearRegressionPage.jsx  NeuralNetworkPage.jsx  TextClassificationPage.jsx
frontChat/src/styles/: globals.css
frontChat/src/utils/: dateFormatter.js  fixPageBlocking.js
(+30 files in other folders)
