[project]
name = "edu-agent"
version = "0.1.0"
description = "AI tutor backend that powers the ChatBotInterface project."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "EduAgent Team" }]
license = { text = "MIT" }
dependencies = [
	"fastapi>=0.111,<1.0",
	"uvicorn[standard]>=0.29",
	"python-dotenv>=1.0",
	"google-generativeai>=0.8",
	"pymongo>=4.8",
	"qdrant-client>=1.10",
	"sentence-transformers>=3.0",
	"numpy>=1.26",
	"pydantic>=2.7",
	"requests>=2.32"
]

[project.optional-dependencies]
dev = [
	"pytest>=8.3",
	"httpx>=0.27",
	"ruff>=0.6"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
